5sem/IFJ/test/tests/lexer/errors/test_string_control_char.wren
import "ifj25" for Ifj

class Program {
    static main() {
        var str
        // Tu vkladame skutocny znak ASCII 1 (SOH) medzi uvodzovky
        str = "Bad char: "
        __dummy = Ifj.write(str)
    }
}